Fix insights tab scrollbar background (#393)
(cherry picked from commit 7947859a7e303dc53996ae76b8939d5368a8749d)

--- a/webpack/InsightsHostDetailsTab/InsightsTab.scss
+++ b/webpack/InsightsHostDetailsTab/InsightsTab.scss
@@ -77,7 +77,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background: #0e0e0e6e;
+      background: #222;
       border-radius: 6px;
       border: 3px solid transparent;
       background-clip: content-box;
